fix overflow

--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 
   &__photo {
