--- a/css/style.css
+++ b/css/style.css
@@ -620,7 +620,7 @@
 }
 
 .about {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
